--- a/index.html
+++ b/index.html
@@ -2,13 +2,34 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>버스 시간표 (99번 / 2-1번)</title>
   <style>
     body { font-family: Arial, Helvetica, "Noto Sans KR", system-ui; background:#f5f5f5; margin:0 }
     .selectors { display:flex; gap:12px; padding:12px 16px; background:#333; color:#fff; align-items:center }
     select { padding:6px 8px }
     .info { padding:10px 16px; background:#eee; color:#222 }
-    .table-container { padding:16px }
+    .table-container { padding:16px; overflow-x:auto; -webkit-overflow-scrolling: touch }
+    /* 테이블 헤더/첫열 고정 */
+    table thead th { position: sticky; top: 0; z-index: 2 }
+    table th:first-child, table td:first-child { position: sticky; left: 0; background:#fafafa; z-index: 3 }
+    /* 모바일 최적화 */
+    @media (max-width: 768px) {
+      body { font-size: 14px }
+      .selectors { flex-wrap: wrap; gap:8px }
+      .selectors label { width: calc(50% - 8px) }
+      .selectors select { width: 100%; padding:10px; font-size:16px }
+      .info { font-size: 13px; line-height: 1.4 }
+      table { font-size: 13px }
+      th, td { padding: 8px 10px }
+    }
+    @media (max-width: 420px) {
+      body { font-size: 13px }
+      .selectors label { width:100% }
+      .info { font-size: 12px }
+      table { font-size: 12px }
+      th, td { padding: 6px 8px }
+    }
     table { width:100%; border-collapse:collapse }
     th, td { border:1px solid #999; padding:6px; text-align:center }
     th { background:#eee }
