--- a/index.html
+++ b/index.html
@@ -2,26 +2,41 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- ✅ 뷰포트 강화 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
+  <meta name="HandheldFriendly" content="true" />
   <title>버스 시간표 (99번 / 2-1번)</title>
   <style>
-    body { font-family: Arial, Helvetica, "Noto Sans KR", system-ui; background:#f5f5f5; margin:0 }
-    .selectors { display:flex; gap:12px; padding:12px 16px; background:#333; color:#fff; align-items:center }
+    /* ✅ 크롬 자동 글자 확대 방지 */
+    html { -webkit-text-size-adjust: 100%; }
+    body { font-family: Arial, Helvetica, "Noto Sans KR", system-ui; background:#f5f5f5; margin:0; }
+    .selectors { display:flex; gap:12px; padding:12px 16px; background:#333; color:#fff; align-items:center; flex-wrap:wrap; }
     select { padding:6px 8px }
     .info { padding:10px 16px; background:#eee; color:#222 }
-    .table-container { padding:16px; overflow-x:auto; -webkit-overflow-scrolling: touch }
-    /* 테이블 헤더/첫열 고정 */
-    table thead th { position: sticky; top: 0; z-index: 2 }
-    table th:first-child, table td:first-child { position: sticky; left: 0; background:#fafafa; z-index: 3 }
-    /* 모바일 최적화 */
+    /* ✅ 가로 스크롤은 컨테이너 안에만, 페이지는 절대 안 늘어나게 */
+    .table-container { padding:16px; overflow-x:auto; -webkit-overflow-scrolling:touch; width:100%; max-width:100vw; }
+
+    /* 테이블 공통 */
+    table { width:100%; border-collapse:collapse; table-layout:fixed; } /* ✅ fixed로 수평 폭 계산 안정화 */
+    th, td { border:1px solid #999; padding:6px; text-align:center; white-space:nowrap; } /* ✅ nowrap로 셀 줄바꿈 방지(가로 스크롤 유도) */
+    th { background:#eee }
+
+    /* 데스크톱에서만 헤더/첫열 고정(모바일에서는 축소 유발 가능성 있어 끔) */
+    @media (min-width: 769px) {
+      table thead th { position: sticky; top: 0; z-index: 2; }
+      table th:first-child, table td:first-child { position: sticky; left: 0; background:#fafafa; z-index: 3; }
+    }
+    /* ✅ 모바일 최적화 */
     @media (max-width: 768px) {
       body { font-size: 14px }
-      .selectors { flex-wrap: wrap; gap:8px }
+      .selectors { gap:8px }
       .selectors label { width: calc(50% - 8px) }
       .selectors select { width: 100%; padding:10px; font-size:16px }
       .info { font-size: 13px; line-height: 1.4 }
       table { font-size: 13px }
       th, td { padding: 8px 10px }
+      /* ✅ 혹시 남아있는 sticky가 있더라도 강제로 해제 */
+      table thead th, table th:first-child, table td:first-child { position: static !important; }
     }
     @media (max-width: 420px) {
       body { font-size: 13px }
@@ -30,9 +45,7 @@
       table { font-size: 12px }
       th, td { padding: 6px 8px }
     }
-    table { width:100%; border-collapse:collapse }
-    th, td { border:1px solid #999; padding:6px; text-align:center }
-    th { background:#eee }
+
     .cell-prev { background:#c8e6c9 !important }
     .cell-next { background:#fff59d !important }
   </style>
@@ -53,7 +66,7 @@
   <div class="table-container" id="tableContainer"></div>
 
 <script>
-// ===================== 데이터 =====================
+/* ===================== 데이터 ===================== */
 const timetable = {
   weekday: {
     "99번": [
@@ -164,10 +177,10 @@ const timetable = {
   }
 };
 
-// ===== 노선별 방향 옵션 =====
+/* ===== 노선별 방향 옵션 ===== */
 const directionOptions = {
-  "99번": ["성복역", "상현역"], // 요청대로 99는 성복/상현 순서
-  "2-1번": ["죽전역", "구성역"] // 2-1은 죽전/구성 순서
+  "99번": ["성복역", "상현역"],
+  "2-1번": ["죽전역", "구성역"]
 };
 
 function updateDirectionOptions() {
@@ -204,22 +217,25 @@ function renderTable(){
     const start = (direction==='상현역')?1:2; // 상현=홀/성복=짝
     for(let i=start;i<colsPerRow;i+=2) dirCols.push(i);
   } else if(route==='2-1번'){
-    const start = (direction==='구성역')?1:2; // 구성=홀/죽전=짝 (데이터 구조 기준)
+    const start = (direction==='구성역')?1:2; // 구성=홀/죽전=짝
     for(let i=start;i<colsPerRow;i+=2) dirCols.push(i);
   }
 
   const table=document.createElement('table');
-  const thead=document.createElement('tr');
-  thead.appendChild(Object.assign(document.createElement('th'),{innerText:'회차'}));
-  dirCols.forEach((_,idx)=>thead.appendChild(Object.assign(document.createElement('th'),{innerText:`${idx+1}호차 ${direction}`})));
+  const theadRow=document.createElement('tr');
+  theadRow.appendChild(Object.assign(document.createElement('th'),{innerText:'회차'}));
+  dirCols.forEach((_,idx)=>theadRow.appendChild(Object.assign(document.createElement('th'),{innerText:`${idx+1}호차 ${direction}`})));
+  const thead=document.createElement('thead'); thead.appendChild(theadRow);
   table.appendChild(thead);
 
+  const tbody=document.createElement('tbody');
   for(const row of data){
     const tr=document.createElement('tr');
     tr.appendChild(Object.assign(document.createElement('td'),{innerText:row[0]}));
     dirCols.forEach(c=>tr.appendChild(Object.assign(document.createElement('td'),{innerText:row[c]||''})));
-    table.appendChild(tr);
+    tbody.appendChild(tr);
   }
+  table.appendChild(tbody);
   container.appendChild(table);
   highlight(table);
 }
@@ -228,19 +244,32 @@ function highlight(table){
   const now=new Date(); const cur=now.getHours()*60+now.getMinutes();
   const rows=table.querySelectorAll('tr'); if(!rows.length) return;
   table.querySelectorAll('td').forEach(el=>el.classList.remove('cell-prev','cell-next'));
-  const pts=[]; for(let r=1;r<rows.length;r++){ const tds=rows[r].querySelectorAll('td'); for(let c=1;c<tds.length;c++){ const m=tds[c].innerText.match(/^(\d{1,2}):(\d{2})$/); if(!m) continue; const mins=parseInt(m[1])*60+parseInt(m[2]); pts.push({r,c,mins}); } }
-  if(!pts.length) return; pts.sort((a,b)=>a.mins-b.mins);
-  let prev=null,next=null; for(const p of pts){ if(p.mins<=cur) prev=p; if(p.mins>cur){ next=p; break; } }
+  const pts=[]; 
+  for(let r=1;r<rows.length;r++){
+    const tds=rows[r].querySelectorAll('td'); 
+    for(let c=1;c<tds.length;c++){
+      const m=tds[c].innerText.match(/^(\d{1,2}):(\d{2})$/); 
+      if(!m) continue; 
+      const mins=parseInt(m[1])*60+parseInt(m[2]); 
+      pts.push({r,c,mins}); 
+    }
+  }
+  if(!pts.length) return; 
+  pts.sort((a,b)=>a.mins-b.mins);
+  let prev=null,next=null; 
+  for(const p of pts){ if(p.mins<=cur) prev=p; if(p.mins>cur){ next=p; break; } }
   if(!next) next=pts[0]; if(!prev) prev=pts[pts.length-1];
-  const pc=rows[prev.r].querySelectorAll('td')[prev.c]; const nc=rows[next.r].querySelectorAll('td')[next.c];
-  if(pc) pc.classList.add('cell-prev'); if(nc) nc.classList.add('cell-next');
+  const pc=rows[prev.r].querySelectorAll('td')[prev.c]; 
+  const nc=rows[next.r].querySelectorAll('td')[next.c];
+  if(pc) pc.classList.add('cell-prev'); 
+  if(nc) nc.classList.add('cell-next');
 }
 
-// 초기화
+/* 초기화 */
 updateDirectionOptions();
 renderTable();
 
-// 이벤트
+/* 이벤트 */
 document.getElementById('routeSelect').addEventListener('change', ()=>{ updateDirectionOptions(); renderTable(); });
 document.getElementById('directionSelect').addEventListener('change', renderTable);
 setInterval(renderTable, 30000);
